--- a/02-DataStructuresFunctions.Rmd
+++ b/02-DataStructuresFunctions.Rmd
@@ -16,7 +16,7 @@ Package **meteoland** assists in the estimation of the following variables over 
 + `WindDirection`: Wind direction (in degrees from North).
 + `PET`: Potential evapo-transpiration (in mm of water).
 
-The package deals with three kinds of spatial structures: individual points, a set of pixels from a spatial grid and full (i.e. complete) grids. The package includes six S4 spatial classes, which are defined as children of classes in package **sp**. 
+The package deals with three kinds of spatial structures: individual points, a set of pixels from a spatial grid and full (i.e. complete) grids. The package includes six S4 spatial classes, which are defined as children of classes in package [**sp**](https://cran.r-project.org/package=sp). 
 
 ### Topography
 Three classes are defined to represent the variation of topographic features (i.e., elevation, slope and aspect) over space:
@@ -53,13 +53,13 @@ showClass("SpatialGridMeteorology")
 showClass("SpatialPixelsMeteorology")
 ```
 
-In addition to their corresponding inherited slots, `SpatialPointsMeteorology`, `SpatialGridMeteorology` and `SpatialPixelsMeteorology` have two additional slots: `dates` (a vector of days specifying a time period), and `data` (a vector of data frames with the meteorological data). Although the three classes have a `data` slot containing data frames, meteorological data is in different form in each class. In objects of `SpatialPointsMeteorology`, there is one data frame for each point where variables are in columns and dates are in rows. In objects of `SpatialGridMeteorology` and `SpatialPixelsMeteorology`, each data frame describes the meteorology over a complete grid, or a subset of cells, for a single day. In these cases, the data frame has grid cells in rows and variables in columns.
+In addition to their corresponding inherited slots, classes `SpatialPointsMeteorology`, `SpatialGridMeteorology` and `SpatialPixelsMeteorology` have two additional slots: **`dates`** (a vector of days specifying a time period), and **`data`** (a vector of data frames with the meteorological data). Although the three classes have a `data` slot containing data frames, meteorological data is in different form in each class. In objects of `SpatialPointsMeteorology`, there is one data frame for each point where variables are in columns and dates are in rows. In objects of `SpatialGridMeteorology` and `SpatialPixelsMeteorology`, each data frame describes the meteorology over a complete grid, or a subset of cells, for a single day. In these cases, the data frame has grid cells in rows and variables in columns.
 
 
 ## Reading and writing meteorological data
 
 ### Point meteorology
-Objects of class `SpatialPointsMeteorology` are stored in the disk using one data file for each of their spatial points. Files can be stored in **ascii** format or **rds** (compressed) format. Package **meteoland** provides four input/output functions for point meteorology:
+Objects of class `SpatialPointsMeteorology` are stored in the disk using one data file for each of their spatial points. Files can be stored in **ascii** (i.e. text) format or **rds** (i.e. R data of a single object compressed) format. Package **meteoland** provides four input/output functions for point meteorology:
 
 + Function `readmeteorologypoint()` reads the meteorological data stored in one **ascii**/**rds** data file and returns a data frame.
 + Function `writemeteorologypoint()` writes the meteorological data of a single point as an **ascii**/**rds** file in the file system.
@@ -67,7 +67,7 @@ Objects of class `SpatialPointsMeteorology` are stored in the disk using one dat
 + Functions `writemeteorologypointfiles()` writes several **ascii**/**rds** files in the disk, one per spatial point. Metadata (i.e. the spatial coordinates of each point and the corresponding file path) is stored in an additional file.
 
 ### Gridded meteorology
-[**NetCDF**](https://www.unidata.ucar.edu/software/netcdf/docs/netcdf_introduction.html) is a set of libraries to write machine-independent data formats that support the creation and sharing of array-oriented scientific data. **NetCDF**  is very useful useful to store spatio-temporal datasets, as it allows storing the grid topology, the time period being described and the spatial projection as well as the actual data all in the same file. Moreover, **NetCDF** can be read and written lazily, without having to load all the file in memory. Package **meteoland** allows objects of classes  `SpatialPixelsMeteorology` and `SpatialGridMeteorology` to be stored in the disk as **NetCDF** thanks to the functions provided by [`ncdf4`](https://cran.r-project.org/package=ncdf4) R package, which provides an interface to Unidata's netCDF library (version 4 or earlier). 
+[**NetCDF**](https://www.unidata.ucar.edu/software/netcdf/docs/netcdf_introduction.html) is a set of libraries to write machine-independent data formats that support the creation and sharing of array-oriented scientific data. **NetCDF**  is very useful useful to store spatio-temporal datasets, as it allows storing the grid topology, the time period being described and the spatial projection as well as the actual data all in the same file. Moreover, **NetCDF** can be read and written lazily, without having to load all the file in memory. Package **meteoland** allows objects of classes  `SpatialPixelsMeteorology` and `SpatialGridMeteorology` to be stored in the disk as **NetCDF** thanks to the functions provided by [**ncdf4**](https://cran.r-project.org/package=ncdf4) R package, which provides an interface to Unidata's netCDF library (version 4 or earlier). 
 
 The following functions are available for input/output of meteorology over a full grid or on a subset of grid cells:
 
@@ -85,7 +85,7 @@ Although very simple, the package provides two kinds of functions to visualize t
 Similarly, function `spplot()` also accepts objects of classes `SpatialGridTopography` and `SpatialPixelsTopography`, so that topography can also be easily displayed.
 
 
-## Manipulating topographic and meteorological data
+## Manipulating and reshaping topographic/meteorological data structures
 
 Following the design of package **sp**, package meteoland provides functions for switching between spatial structures. For example, it is possible to coerce an object of `SpatialPointsTopography` into a `SpatialPixelsTopography` using a call like `as(x, "SpatialPixelsTopography")`. Subsetting is also allowed, so that estimations of daily meteorology can be performed in subsets of points or grids.
 
@@ -94,6 +94,7 @@ The package provides a few functions to extract/reshape meteorological data:
 + Function `extractgridpoints()` extracts the meteorology of particular points in a grid. It accepts objects of `SpatialGridMeteorology` and `SpatialPixelsMeteorology` as input and it returns an object of `SpatialPointsMeteorology`.
 + Function `extractpointdates()` extracts the meteorology of a set of dates from an object of class `SpatialPointsMeteorology`. It returns one data frame for each date, with points in rows and meteorology variables in columns.
 
+Additionally, the package provides some functions to reshape meteorological data structures into more general structures of spatio-temporal data, so that they can be more easily processed, combined and stored using other R packages. In particular, objects of classes `SpatialPointsMeteoroloy`, `SpatialGridMeteorology` and `SpatialPixelsMeteorology` can be reshaped into objects of packages [**stars**](https://cran.r-project.org/package=stars) and [**spacetime**](https://cran.r-project.org/package=spacetime) by using calls like `as(x, "stars")` or `as(x, "STFDF")`.
 
 ## Summarizing meteorological data
 
