--- a/index.Rmd
+++ b/index.Rmd
@@ -10,7 +10,7 @@ documentclass: book
 bibliography: [meteoland.bib]
 biblio-style: apalike
 link-citations: yes
-description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
+description: "This is a reference book for data structures and functions included in package meteoland."
 ---
 
 ```{r, echo=FALSE}
@@ -19,11 +19,17 @@ library(meteoland)
 
 # Preface {-}
 
+This is a reference book for the data structures and functions implemented in **meteoland**, an R package that provides functions to estimate daily weather at any position over given terrains.
+
 ## How to use this book {-}
 
 This reference book is meant to help you understand the data structures and functions included in package **meteoland** (ver. **`r packageVersion("meteoland")`**). Hands-on user guides can be found as package vignettes within the package. As any reference book, you are not expected to read the book linearly, but to jump to sections whenever you have doubts about the design of the package or implementation of certain calculations.
 
-The reference book describes in detail the design and functioning of the package. An introduction to the package was provided by De Cáceres et al. [-@DeCaceres2018] at the time of presenting the package, but this reference book should be preferred for an up-to-date description of the package.
+The first two chapters of the book present the package, its data structures and main function. Chapter 3 focuses on the functions supplied for interpolating weather records and chapter 4 explains how solar radiation is estimated. Chapter 5 is devoted to statistical correction of weather series (i.e. bias correction). The remaining chapters detail other functions meant to complete the package.
+
+In this book we use `objectname` or `variablename` to indicate R code or to refer to an R objects or a variable within data frames, and `functionname()` to refer to a package function. Whenever relevant, we indicate the correspondence between mathematical symbols, their units and the names used within the R package. 
+
+The reference book describes in detail the design and functioning of the package. An introduction to the package was provided by De Cáceres et al. [-@DeCaceres2018] at the time of its presentation, but this reference book should be preferred for an up-to-date description of the package. Our aim is to update this reference book along with package developments, so that users have detailed and up-to-date information about the models at the time functions are run. As the book will not be static, after a given application we recommend users to store a **PDF version** of the reference book to be sure it matches the version the package reported in their application report or article.
 
 ```{r, out.width='20%', fig.align="center", echo=FALSE}
 knitr::include_graphics("LOGO_Group.png")
